--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t yourdockerhubusername/bestbuy-staff-service .
+          docker build -t mohitsp21/staff-service .
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -34,4 +34,4 @@ jobs:
 
       - name: Push Docker Image
         run: |
-          docker push yourdockerhubusername/bestbuy-staff-service
+          docker push mohitsp21/staff-service
